NMS-13869: make eventId a Long everywhere it is used (I think)