@@ -199,7 +199,7 @@ public class HibernateEventWriterIT {
         bldr.addParam("test", b64);
 
         Event event = bldr.getEvent();
-        assertEquals(new Integer(0), event.getDbid());
+        assertEquals(0L, event.getDbid().longValue());
         m_eventWriter.process(bldr.getLog());
         assertTrue(event.getDbid() > 0);
 
@@ -228,7 +228,7 @@ public class HibernateEventWriterIT {
         bldr.setDescription("abc\u0000def");
 
         Event event = bldr.getEvent();
-        assertEquals(new Integer(0), event.getDbid());
+        assertEquals(0L, event.getDbid().longValue());
 
         m_eventWriter.process(bldr.getLog());
         assertTrue(event.getDbid() > 0);
@@ -250,7 +250,7 @@ public class HibernateEventWriterIT {
         bldr.setLogMessage("test");
 
         Event event = bldr.getEvent();
-        assertEquals(new Integer(0), event.getDbid());
+        assertEquals(0L, event.getDbid().longValue());
         m_eventWriter.process(bldr.getLog());
         assertTrue(event.getDbid() > 0);
 
@@ -280,7 +280,7 @@ public class HibernateEventWriterIT {
         bldr.setLogMessage("abc\u0000def");
 
         Event event = bldr.getEvent();
-        assertEquals(new Integer(0), event.getDbid());
+        assertEquals(0L, event.getDbid().longValue());
         m_eventWriter.process(bldr.getLog());
         assertTrue(event.getDbid() > 0);
 
@@ -375,11 +375,11 @@ public class HibernateEventWriterIT {
         bldr.setService(serviceName);
 
         Event event = bldr.getEvent();
-        assertEquals(new Integer(0), event.getDbid());
+        assertEquals(0L, event.getDbid().longValue());
         m_eventWriter.process(bldr.getLog());
         assertTrue(event.getDbid() > 0);
         
-        assertEquals("event count", new Integer(1), jdbcTemplate.queryForObject("select count(*) from events", Integer.class));
-        assertEquals("event service ID", new Integer(serviceId), jdbcTemplate.queryForObject("select serviceID from events", Integer.class));
+        assertEquals("event count", Integer.valueOf(1), jdbcTemplate.queryForObject("select count(*) from events", Integer.class));
+        assertEquals("event service ID", Integer.valueOf(serviceId), jdbcTemplate.queryForObject("select serviceID from events", Integer.class));
     }
 }
